tests/paczka2/big_fuzzy/13027027.err
Error in line 1: 01uG8 S599 21,5
Error in line 5: 01uG8 A725 36,6
Error in line 26: S599 A905 43,7
Error in line 35: k4g S599 21,46
Error in line 20: k4g S599 53,2
Error in line 44: S599 A408 45,4
Error in line 52: 01uG8 A905 37,7
Error in line 43: k4g A408 56,3
Error in line 41: JSxk8zvm A725 36,8
Error in line 63: JSxk8zvm A408 56,4
Error in line 69: JSxk8zvm A725 12,4
Error in line 71: WHxyIzo4O A725 11,4
Error in line 79: jTWJ A408 47,1
Error in line 89: jTWJ A725 50,3
Error in line 87: JSxk8zvm S599 15,5
Error in line 78: iH1 S599 63,5
Error in line 96: iH1 A725 94,8
Error in line 92: JSxk8zvm A408 75,8
Error in line 104: k4g S599 29,5
Error in line 112: 01¹G8 A725 56,9
Error in line 102: 01uG8 S599 87,8
Error in line 119: JSxk8zvm S599 236,1
Error in line 122: jTWJ A408 23,5
Error in line 131: k4g A905 -3,7
Error in line 130: k4g A905 75,9
Error in line 132: iH1 A408 79,7
Error in line 137: jTWJ A905 32,4
Error in line 145: JSxk8zvm A408 77,5
Error in line 135: WHxyIzo4O S599 29,9
Error in line 142: jTWJ S599 755,4
Error in line 162: jTWJ A725 16,9
Error in line 161: WHxyIzo4O A408 62,2
Error in line 169: 01uG8 A725 15,9
Error in line 171: iH1 A725 31,8
Error in line 172: 01uG8 S599 93,2
Error in line 167: WHxyIzo4O A725 42,5
Error in line 184: JSxk8zvm S599 50,8
Error in line 186: JSxk8zvm A905 34,9
Error in line 160: S599 A725 34,7
Error in line 198: 01uG8 S599 3,9
Error in line 194: S599 A408 27,2
Error in line 211: WHxyIzo4OBA408B86,3
Error in line 214: S599 S599 71,3
Error in line 219: jTWJ A408 29,5
Error in line 215: k4g A408 76,0
Error in line 203: WHxyIzo4O A725 4,4
Error in line 229: WHxyIzo4O S599 75,8
Error in line 243: jTWJ A725 179,62
Error in line 240: S599 A408 37,6
